--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,16 @@
 .button {
   color: white;
+  margin: 1px;
 }
 
-.gifToggle {
+#gifDisplay {
   width: 100%;
       top: 30%;
       left: 0%;
 }
 
-.gifImage{
+
+.singerImage{
       border: solid black 1px;
       width: 120%;
       height: 120%;
@@ -17,3 +19,10 @@
       max-width: 200px;
       background-color: lightgrey;
     }
+
+    
+.gifToggle, .gif{
+      float:left;
+      margin: 0px;
+      width: 210px;
+}
